--- a/rec.qrc
+++ b/rec.qrc
@@ -1,15 +1,14 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/bullet.png</file>
-        <file>images/background1.jpg</file>
-        <file>images/background2.jpg</file>
         <file>images/open_spot.png</file>
-        <file>images/monster1.png</file>
-        <file>images/tower3.png</file>
-        <file>images/tower2.png</file>
         <file>images/background.jpg</file>
+        <file>images/background11.jpg</file>
+        <file>images/background12.jpg</file>
+        <file>images/background13.jpg</file>
         <file>images/tower1.jpg</file>
-        <file>images/background3.jpg</file>
-        <file>images/background4.jpg</file>
+        <file>images/tower2.png</file>
+        <file>images/tower3.jpg</file>
+        <file>images/monster1.png</file>
+        <file>images/bullet.jpg</file>
     </qresource>
 </RCC>
